sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:6: error: value -+ is not a member of Int
  for(j<- 0 to i-+1){
                ^